; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_ifs.c_RemoveMemoryLocation.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_ifs.c_RemoveMemoryLocation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32** }

@Malloc32 = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @RemoveMemoryLocation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @RemoveMemoryLocation(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32**, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Malloc32, i32 0, i32 0), align 8
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %12, label %7

7:                                                ; preds = %1
  %8 = call i32 @SetSpyedBlockTableLength(i32 4096)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %7
  %11 = load i32, i32* @FALSE, align 4
  store i32 %11, i32* %2, align 4
  br label %36

12:                                               ; preds = %7, %1
  %13 = load i32**, i32*** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Malloc32, i32 0, i32 2), align 8
  store i32** %13, i32*** %4, align 8
  br label %14

14:                                               ; preds = %30, %12
  %15 = load i32**, i32*** %4, align 8
  %16 = load i32*, i32** %15, align 8
  %17 = load i32*, i32** %3, align 8
  %18 = icmp ne i32* %16, %17
  br i1 %18, label %19, label %31

19:                                               ; preds = %14
  %20 = load i32**, i32*** %4, align 8
  %21 = getelementptr inbounds i32*, i32** %20, i32 1
  store i32** %21, i32*** %4, align 8
  %22 = load i32**, i32*** %4, align 8
  %23 = load i32**, i32*** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Malloc32, i32 0, i32 2), align 8
  %24 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Malloc32, i32 0, i32 0), align 8
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i32*, i32** %23, i64 %25
  %27 = icmp uge i32** %22, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %19
  %29 = load i32, i32* @FALSE, align 4
  store i32 %29, i32* %2, align 4
  br label %36

30:                                               ; preds = %19
  br label %14

31:                                               ; preds = %14
  %32 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Malloc32, i32 0, i32 1), align 4
  %33 = add nsw i32 %32, -1
  store i32 %33, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Malloc32, i32 0, i32 1), align 4
  %34 = load i32**, i32*** %4, align 8
  store i32* null, i32** %34, align 8
  %35 = load i32, i32* @TRUE, align 4
  store i32 %35, i32* %2, align 4
  br label %36

36:                                               ; preds = %31, %28, %10
  %37 = load i32, i32* %2, align 4
  ret i32 %37
}

declare dso_local i32 @SetSpyedBlockTableLength(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
